# iocoro

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  README.md  asio_tcp_connect_accept.cpp  asio_tcp_echo.cpp  asio_tcp_roundtrip.cpp  connect_accept_report.schema.json  iocoro_tcp_echo.cpp  iocoro_tcp_roundtrip.cpp  perf_report.schema.json  run_tcp_connect_accept_baseline.sh  run_tcp_roundtrip_baseline.sh  validate_perf_report.py
benchmark/apps/: asio_thread_pool_scaling.cpp
benchmark/apps/asio/: asio_tcp_throughput.cpp
benchmark/apps/iocoro/: iocoro_tcp_roundtrip.cpp  iocoro_timer_churn.cpp  tcp_connect_accept.cpp  thread_pool_scaling.cpp
benchmark/asio/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
benchmark/baseline/: tcp_connect_accept_thresholds.txt  tcp_roundtrip_thresholds.txt
benchmark/baselines/: tcp_latency_thresholds.txt  tcp_throughput_thresholds.txt  thread_pool_scaling_thresholds.txt  timer_churn_thresholds.txt  udp_send_receive_thresholds.txt
benchmark/cases/asio/: tcp_connect_accept.cpp  tcp_latency.cpp  tcp_roundtrip.cpp  tcp_throughput.cpp  thread_pool_scaling.cpp  timer_churn.cpp  udp_send_receive.cpp
benchmark/cases/iocoro/: tcp_connect_accept.cpp  tcp_latency.cpp  tcp_roundtrip.cpp  tcp_throughput.cpp  thread_pool_scaling.cpp  timer_churn.cpp  udp_send_receive.cpp
benchmark/conf/: tcp_connect_accept.conf  tcp_latency.conf  tcp_roundtrip.conf  tcp_throughput.conf  thread_pool_scaling.conf  timer_churn.conf  udp_send_receive.conf
benchmark/iocoro/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
benchmark/schemas/: connect_accept_report.schema.json  latency_report.schema.json  perf_report.schema.json  tcp_connect_accept.schema.json  tcp_latency.schema.json  tcp_roundtrip.schema.json  tcp_throughput.schema.json  thread_pool_report.schema.json  thread_pool_scaling.schema.json  throughput_report.schema.json  timer_churn.schema.json  timer_report.schema.json  udp_report.schema.json  udp_send_receive.schema.json
benchmark/scripts/: common.sh  run_all_perf_benchmarks.sh  run_perf_benchmarks.sh  run_perf_ratio_suite.sh  run_ratio_baseline_suite.sh  run_ratio_suite.sh  run_tcp_connect_accept_baseline.sh  run_tcp_connect_accept_benchmark.sh  run_tcp_latency_baseline.sh  run_tcp_latency_benchmark.sh  run_tcp_roundtrip_baseline.sh  run_tcp_roundtrip_benchmark.sh  run_tcp_throughput_baseline.sh  run_tcp_throughput_benchmark.sh  run_thread_pool_scaling_baseline.sh  run_thread_pool_scaling_benchmark.sh  run_timer_churn_baseline.sh  run_timer_churn_benchmark.sh  run_udp_send_receive_baseline.sh  run_udp_send_receive_benchmark.sh  validate_perf_report.py
benchmark/scripts/suites/: run_perf_tcp_connect_accept.sh  run_perf_tcp_latency.sh  run_perf_tcp_roundtrip.sh  run_perf_tcp_throughput.sh  run_perf_thread_pool_scaling.sh  run_perf_timer_churn.sh  run_perf_udp_send_receive.sh
cmake/: iocoroConfig.cmake.in
docs/: architecture-boundaries.md
examples/: CMakeLists.txt  hello_io_context.cpp  switch_executor.cpp  tcp_echo.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  tcp_graceful_shutdown.cpp  tcp_timeout_cancel_client.cpp  udp_echo_server_client.cpp
include/iocoro/: any_executor.hpp  any_io_executor.hpp  assert.hpp  awaitable.hpp  awaitable_operators.hpp  basic_socket.hpp  bind_executor.hpp  bind_stop_token.hpp  cancellation_token.hpp  co_sleep.hpp  co_spawn.hpp  completion_token.hpp  condition_event.hpp  detached.hpp  error.hpp  executor.hpp  expected.hpp  impl.hpp  io_context.hpp  io_executor.hpp  iocoro.hpp  ip.hpp  local.hpp  net.hpp  notify_event.hpp  result.hpp  shutdown.hpp  socket_option.hpp  src.hpp  steady_timer.hpp  stop_scope.hpp  strand.hpp  this_coro.hpp  thread_pool.hpp  thread_pool_executor.hpp  timeout.hpp  timer_handle.hpp  use_awaitable.hpp  when_all.hpp  when_any.hpp  (+2 more)
include/iocoro/detail/: any_executor_access.hpp  any_executor_storage.hpp  async_op.hpp  async_operation.hpp  awaitable_promise.hpp  basic_io_handle.hpp  basic_socket_handle.hpp  executor_cast.hpp  executor_guard.hpp  fd_registry.hpp  io_context_impl.hpp  io_executor_access.hpp  lockfree_mpmc_queue.hpp  operation_async.hpp  operation_awaiter.hpp  operation_base.hpp  posted_queue.hpp  reactor_backend.hpp  reactor_event.hpp  reactor_types.hpp  require_io_executor.hpp  scope_guard.hpp  socket_endpoint_utils.hpp  socket_handle_base.hpp  socket_utils.hpp  spawn.hpp  timer_entry.hpp  timer_manager.hpp  timer_registry.hpp  unique_function.hpp  wake_state.hpp  work_guard_counter.hpp
include/iocoro/impl/: assert.ipp  error.ipp  executor.ipp  io_context.ipp  io_context_impl.ipp  io_executor.ipp  ip.ipp  resolver.ipp  socket_impl_base.ipp  steady_timer.ipp  stream_socket_impl.ipp  tcp_socket.ipp  thread_pool.ipp  thread_pool_executor.ipp  timer_handle.ipp  udp_socket.ipp
include/iocoro/io/: async_connect.hpp  async_read.hpp  async_read_until.hpp  async_write.hpp  concepts.hpp  connect.hpp  read.hpp  read_until.hpp  stream_concepts.hpp  with_timeout.hpp  write.hpp
include/xz/: io.hpp
scripts/: run_clang_tidy.sh  run_coverage.sh
test/: CMakeLists.txt  acceptor_impl_test.cpp  async_read_test.cpp  async_read_until_test.cpp  async_timeout_test.cpp  async_write_test.cpp  awaitable_compile_test.cpp  awaitable_operators_test.cpp  buffer_test.cpp  cancellation_token_test.cpp  co_sleep_test.cpp  co_spawn_test.cpp  compile_only_smoke.cpp  condition_event_test.cpp  datagram_socket_impl_test.cpp  endpoint_fuzz_like_test.cpp  endpoint_test.cpp  error_test.cpp  executor_test.cpp  expected_test.cpp  fd_registry_test.cpp  io_context_impl_test.cpp  io_context_test.cpp  io_executor_test.cpp  io_modern_test.cpp  io_test.cpp  ip_resolver_test.cpp  ip_test.cpp  local_dgram_test.cpp  local_stream_test.cpp  notify_event_test.cpp  redis_client.cpp  resolver_test.cpp  socket_impl_base_test.cpp  steady_timer_test.cpp  stop_scope_test.cpp  strand_test.cpp  stream_socket_impl_test.cpp  stress_fd_registry_test.cpp  stress_io_context_cancel_thread_test.cpp  (+21 more)
(+175 files in other folders)
